--- a/test/index.html
+++ b/test/index.html
@@ -65,8 +65,10 @@
             사용자의 화면을 통해 보여지는 로고, 헤더, 푸터, 내비게이션, 메뉴, 버튼, 이미지같은
             사용자의 눈에 웹 페이지의 보여지는 구조를 작성하는 범위
         -->
+        <a href="https://naver.com">NAVER</a>
+        <a href="/test/about/">About</a>
+        <a href="/test/login/">login</a>
 
-        <div>Hello World!!</div>
         <img src="./images/logo.png" alt="대체택스트 벤츠">
         <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fimgauto-phinf.pstatic.net%2F20211109_195%2Fauto_16364574045650ThlU_PNG%2F20211109202954_pIqCZLOq.png%22&type=mfullfill358_168_white" alt="대체택스트 벤츠">
         <!--
