--- a/test/index.html
+++ b/test/index.html
@@ -68,9 +68,9 @@
         <a href="https://naver.com">NAVER</a>
         <a href="/test/about/">About</a>
         <a href="/test/login/">login</a>
-
+<!-- 
         <img src="./images/logo.png" alt="대체택스트 벤츠">
-        <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fimgauto-phinf.pstatic.net%2F20211109_195%2Fauto_16364574045650ThlU_PNG%2F20211109202954_pIqCZLOq.png%22&type=mfullfill358_168_white" alt="대체택스트 벤츠">
+        <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fimgauto-phinf.pstatic.net%2F20211109_195%2Fauto_16364574045650ThlU_PNG%2F20211109202954_pIqCZLOq.png%22&type=mfullfill358_168_white" alt="대체택스트 벤츠"> -->
         <!--
             ㅇimg
             // alt(Alternate)는 이미지가 출력되지 못할 경우 대신 출력할 텍스트, 대체 텍스트라 부른다.
