--- a/test/borderPractice.html
+++ b/test/borderPractice.html
@@ -8,9 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <div class="container">
+        <div class="item"></div>
+        <div class="item"></div>
+    </div> -->
+
     <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="borderItem"></div>
+        <div class="borderItem"></div>
+        <div class="borderItem"></div>
     </div>
     
 </body>
