--- a/test/html/boxsizingPractice.html
+++ b/test/html/boxsizingPractice.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/importantSelector.css">
+    <link rel="stylesheet" href="../css//boxsizingPractice.css">
     <title>Document</title>
 </head>
 <body>
-    <div
-    id="color_yellow"
-    class="color_green"
-    style="color: orange;">
-    Hello World;
-</div>
-
-
-
-
-<div id="hello">HELLO green</div>
+    <div class="nomalItem">hello</div>
+    <div class="boxsizingPracticeItem">hello</div>
+    
 </body>
 </html>
