--- a/test/html/index.html
+++ b/test/html/index.html
@@ -33,15 +33,15 @@
             HTML 문서의 제목(title)을 정의한다.
             웹 브라우저에 표시하는 것.
         -->
-        <link rel="stylesheet" href="./css/main.css"/> <!-- 스타일 파일을 따로 저장 후, link태그로 CSS를 연결하여 사용한다.-->
-        <link rel="icon" href="./images/favicon.png"/>
+        <link rel="stylesheet" href="../css//main.css"/> <!-- 스타일 파일을 따로 저장 후, link태그로 CSS를 연결하여 사용한다.-->
+        <link rel="icon" href="../images/favicon.png"/>
         <!--
             ㅇLink
             외부 문서를 가져와 연결할 때 사용한다.(대부분 CSS파일을 사용)
             // ref : (필수)가져올 문서와 관게
             // href : 가져올 문서의 경로
         -->
-        <script src="./js/main.js"></script> <!-- JS 파일을 사용하기 위해서 따로 저장 후, src속성을 사용하여 스크립트를 사용한다.-->
+        <script src="../js/main.js"></script> <!-- JS 파일을 사용하기 위해서 따로 저장 후, src속성을 사용하여 스크립트를 사용한다.-->
         <!--
             ㅇScript
             JS를 HTML문서에서 사용한다.
@@ -66,8 +66,8 @@
             사용자의 눈에 웹 페이지의 보여지는 구조를 작성하는 범위
         -->
         <a href="https://naver.com">NAVER</a>
-        <a href="/test/about/">About</a>
-        <a href="/test/login/">login</a>
+        <a href="/test/about">About</a>
+        <a href="/test/login">login</a>
 <!-- 
         <img src="./images/logo.png" alt="대체택스트 벤츠">
         <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fimgauto-phinf.pstatic.net%2F20211109_195%2Fauto_16364574045650ThlU_PNG%2F20211109202954_pIqCZLOq.png%22&type=mfullfill358_168_white" alt="대체택스트 벤츠"> -->
