--- a/test/html/Pseudo-Elements.html
+++ b/test/html/Pseudo-Elements.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/paddingPractice.css">
+    <link rel="stylesheet" href="../css//Pseudo-Elements.css">
     <title>Document</title>
+    
 </head>
 <body>
-    <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
-    </div>
-    
+    <div class="box">HTML</div>
 </body>
 </html>
