--- a/test/html/importantSelector.html
+++ b/test/html/importantSelector.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/Pseudo-Elements.css">
+    <link rel="stylesheet" href="../css//importantSelector.css">
     <title>Document</title>
-    
 </head>
 <body>
-    <div class="box">HTML</div>
+    <div
+    id="color_yellow"
+    class="color_green"
+    style="color: orange;">
+    Hello World;
+</div>
+
+
+
+
+<div id="hello">HELLO green</div>
 </body>
 </html>
