--- a/test/html/index2.html
+++ b/test/html/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="stylesheet" href="./css/main2.css">
+    <link rel="stylesheet" href="../css//main2.css">
 </head>
 <body>
     <div>
