--- a/test/html/link_inport_practice.html
+++ b/test/html/link_inport_practice.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/boxsizingPractice.css">
+    <link rel="stylesheet" href="../css//main.css">
+    
     <title>Document</title>
 </head>
 <body>
-    <div class="nomalItem">hello</div>
-    <div class="boxsizingPracticeItem">hello</div>
-    
+    <div>Hello World!!</div>
 </body>
 </html>
