--- a/test/html/paddingPractice.html
+++ b/test/html/paddingPractice.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/borderPractice.css">
+    <link rel="stylesheet" href="../css//paddingPractice.css">
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
-    </div> -->
-
     <div class="container">
-        <div class="borderItem"></div>
-        <div class="borderItem"></div>
-        <div class="borderItem"></div>
+        <div class="item"></div>
+        <div class="item"></div>
     </div>
     
 </body>
